apps/samba/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      containers:
        - name: samba
          image: ghcr.io/servercontainers/samba:smbd-only-latest
          ports:
            - containerPort: 445
          volumeMounts:
            - name: shared
              mountPath: /shares/Shared
      volumes:
        - name: shared
          hostPath:
            path: /home/server/samba/Shared
            type: DirectoryOrCreate
