apps/samba/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba
spec:
  selector:
    app: samba
  ports:
    - name: smb-tcp
      port: 445
      targetPort: 445
