apps/samba/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: samba-smb
spec:
  entryPoints:
    - samba-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: samba
          port: 445
      middlewares:
        - name: vpn-only-tcp
